==> Clnian/smart-curtain/智能窗帘/API/oled/OLED.c <==
#include "stm32f10x.h"
#include "OLED.h"
#include <string.h>
#include <math.h>
#include <stdio.h>
#include <stdarg.h>

void OLED_W_SCL(uint8_t BitValue)
{
    /* OLED底层驱动说明 */
    GPIO_WriteBit(OLED_GPIO_SCL_PORT, OLED_GPIO_SCL_PIN, (BitAction)BitValue);
    
    /* OLED底层驱动说明 */
    //...
}

void OLED_W_SDA(uint8_t BitValue)
{
    /* OLED底层驱动说明 */
    GPIO_WriteBit(OLED_GPIO_SDA_PORT, OLED_GPIO_SDA_PIN, (BitAction)BitValue);
    
    /* OLED底层驱动说明 */
    //...
}

void OLED_Init(void)
{
    OLED_GPIO_Init();            // OLED底层驱动说明
    
    /* OLED底层驱动说明 */
    OLED_WriteCommand(0xAE);    // OLED底层驱动说明
    
    OLED_WriteCommand(0xD5);    // OLED底层驱动说明
    OLED_WriteCommand(0x80);    //0x00~0xFF
    
    OLED_WriteCommand(0xA8);    // OLED底层驱动说明
    OLED_WriteCommand(0x3F);    //0x0E~0x3F
    
    OLED_WriteCommand(0xD3);    // OLED底层驱动说明
    OLED_WriteCommand(0x00);    //0x00~0x7F
    
    OLED_WriteCommand(0x40);    // OLED底层驱动说明
    
    OLED_WriteCommand(0xA1);    // OLED底层驱动说明
    
    OLED_WriteCommand(0xC8);    // OLED底层驱动说明

    OLED_WriteCommand(0xDA);    // OLED底层驱动说明
    OLED_WriteCommand(0x12);
    
    OLED_WriteCommand(0x81);    // OLED底层驱动说明
    OLED_WriteCommand(0xCF);    //0x00~0xFF

    OLED_WriteCommand(0xD9);    // OLED底层驱动说明
    OLED_WriteCommand(0xF1);

    OLED_WriteCommand(0xDB);    // OLED底层驱动说明
    OLED_WriteCommand(0x30);

    OLED_WriteCommand(0xA4);    // OLED底层驱动说明

    OLED_WriteCommand(0xA6);    // OLED底层驱动说明

    OLED_WriteCommand(0x8D);    // OLED底层驱动说明
    OLED_WriteCommand(0x14);

    OLED_WriteCommand(0xAF);    // OLED底层驱动说明
    
    OLED_Clear();                // OLED底层驱动说明
    OLED_Update();                // OLED底层驱动说明
}
